============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.2.1 - not yet released
* Mac OS X
  - fix clock query

Version 6.2 - 2011/09/08
* devices
  - Android IOIO
  - Android: support native serial ports and USB-RS232 adapters
  - added task declaration support for the IMI ERIXX logger
  - improved support for the Digifly Leonardo
  - auto-detect serial ports on Windows CE
  - serial port support on UNIX
  - CAI302: fix byte order bug on PC
  - CAI302: IGC file download
  - IMI ERIXX: IGC file download
  - LX/Colibri: IGC file download
  - LX: support baud rate switching
  - Volkslogger: fix task declaration on PC
  - Vega: update vario when there is no GPS fix
  - PosiGraph: task declaration
  - device declaration can be cancelled
  - reconnect individual devices after failure or timeout
  - device manager dialog, with manual reconnect
* calculations
  - dry mass is seperated from the polar reference mass
  - airspace distance miscalculations fixed
  - new wind algorithm "EKF", replacing ZigZag
  - OLC calculation speedup
* user interface
  - added support for reverse portrait/landscape screen orientations
  - multiple flarm team mates and teams possible
  - nearest airspace distance info boxes
  - better font for large info box values
  - airspace warnings: show vertical distance if above/below
  - profiles are not incremental anymore; initial support for editable
    user profiles
  - MacCready InfoBox: scale increments according to user unit
  - METAR and TAF
* map
  - redraw terrain only if needed (saves battery power)
  - airspace rendering optimised
* data files
  - auto-detect the character encoding in waypoint/airspace files
* tasks
  - allow finish height in MSL or AGL

Version 6.1.5 - 2011/08/20
* data files
  - fixed arcs in TNP airspace files
* devices